--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -28,8 +28,20 @@ add_executable(JUB_test ${SRC_LIST})
 #user lib
 if(APPLE)
     #MacOS与iOS链接framework
-    target_link_libraries(JUB_test PRIVATE  "-framework JubSDK" "-framework CoreFoundation" "-framework IOKit")
+    target_link_libraries(JUB_test PRIVATE JUB_SDK TrezorCrypto libprotobuf ${HID_API_LIB_STATIC}" -framework CoreFoundation" "-framework IOKit")
 else()
     #其他平台链接静态库
-    target_link_libraries(JUB_test PRIVATE JubSDK TrezorCrypto libprotobuf ${HID_API_LIB_STATIC})  
+    target_link_libraries(JUB_test PRIVATE JUB_SDK TrezorCrypto libprotobuf ${HID_API_LIB_STATIC})  
 endif(APPLE)
+
+
+install(TARGETS JUB_test
+        LIBRARY DESTINATION lib
+        ARCHIVE DESTINATION lib
+        RUNTIME DESTINATION bin
+        PUBLIC_HEADER DESTINATION include
+        )
+
+install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/json
+        DESTINATION bin
+)
