--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -31,7 +31,7 @@ if(APPLE)
         target_link_libraries(JUB_test PRIVATE JUB_SDK TrezorCrypto libprotobuf ${HID_API_LIB_STATIC} "-framework CoreFoundation" "-framework IOKit")
 else()
     #其他平台链接静态库
-    target_link_libraries(JUB_test PRIVATE JUB_SDK TrezorCrypto libprotobuf ${HID_API_LIB_STATIC})  
+    target_link_libraries(JUB_test PRIVATE JUB_SDK TrezorCrypto libprotobuf sr25519crust ${HID_API_LIB_STATIC})  
 endif(APPLE)
 
 
